# point_in_polygon_student_project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test  todo.txt
include/: KDTree.h  heap.h  kdtree.h  las_reader.h  linalg.h  point.h
report/: Project Report.aux  Project Report.tex
src/: KDTree.c  heap.c  kdtree.c  las_reader.c  linalg.c  main.c
